# OS

./: .gitignore  README.md
CreatingProcessesWinAPI32/CreatingProcessesWinAPI32/: CreatingProcessesWinAPI32.cpp
CreatingThreadsWinAPI32/: CreatingThreadsWinAPI32.sln
CreatingThreadsWinAPI32/CreatingThreadsWinAPI32/: CreatingThreadsWinAPI32.cpp  CreatingThreadsWinAPI32.vcxproj  CreatingThreadsWinAPI32.vcxproj.filters
CreatingThreadsWinAPI32/CreatingThreadsWinAPI32/x64/Debug/: CreatingThreadsWinAPI32.exe.recipe  CreatingThreadsWinAPI32.ilk  vc143.idb
CreatingThreadsWinAPI32/CreatingThreadsWinAPI32/x64/Debug/Creating.b5ef0178.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CreatingThreadsWinAPI32.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
colloc09.01/todo-api/: pom.xml
colloc09.01/todo-api/src/main/java/com/example/todoapi/: DataInitializer.java
colloc09.01/todo-api/src/main/java/com/example/todoapi/config/: XmlConfig.java
colloc09.01/todo-api/src/main/java/com/example/todoapi/controller/: TaskController.java  TestController.java
colloc09.01/todo-api/src/main/java/com/example/todoapi/dto/: TaskRequest.java
colloc09.01/todo-api/src/main/java/com/example/todoapi/model/: LocalDateTimeAdapter.java  Task.java
colloc09.01/todo-api/src/main/java/com/example/todoapi/repository/: TaskRepository.java
colloc09.01/todo-api/src/main/resources/: application-test.properties  application.properties  task-schema.xsd
colloc09.01/todo-api/src/main/resources/static/: index.html  test-runner.html
colloc23.10/: CMakeLists.txt  colloc.docx  dubl.cpp  fact.cpp  list.cpp
colloc23.10/src/: dubl.hpp  fact.cpp  fact.hpp  list.hpp
colloc23.10/tests/: unit_tests.cpp
lab1/CreatingThreadsWinAPI32/: CMakeLists.txt
lab1/CreatingThreadsWinAPI32/include/: CreatingThreadWinAPI32.h
lab1/CreatingThreadsWinAPI32/src/: CMakeLists.txt  CreatingThreadsWinAPI32.cpp
lab1/CreatingThreadsWinAPI32/tests/: CMakeLists.txt  thread_tests.cpp
lab2/: CMakeLists.txt
lab2/include/lab2/: ArrayProcessor.hpp  PipeManager.hpp  ProcessManager.hpp  Utils.hpp
lab2/src/: ArrayProcessor.cpp  PipeManager.cpp  ProcessManager.cpp  Utils.cpp  main.cpp
lab3/tests/: TestsLab3.cpp
lab4/: Browser.cpp  CMakeLists.txt  Downloader.cpp
lab5/: Browser.cpp  CMakeLists.txt  SystemTest.cpp  Worker.cpp
lecturePresentations/AdapterDP_Demonstration/: AdapterDP_Demonstration.cpp
lecturePresentations/CompositeDP_Demonstration/: CompositeDP_Demonstration.cpp
(+5 files in other folders)
